	+ Hinter der SpielID beim Eintragen der Ergebnisse befindet sich nun ein Link ins Tippspiel zu den Spieldetails
	+ Möglichkeit, einfach zwischen FIFA und UEFA-Feed wechseln zu können (Option hinzugefügt)
	+ Beim Eintragen der Ergebnisse werden die Fahnen neben den Mannschaftsnamen angezeigt
	+ Spiele können erst eingetragen werden, wenn das Spiel vorbei ist
	+ Prüfen, ob cURL installiert ist. Wenn nicht, dann wird im ACP > Optionen einen Hinweis anzgezeigt, dass die Option nicht verfügbar ist
	+ Menüpunkt "Achtelfinale korrigieren" entfernt (Sonderlocke EM 2016)
	+ Es gibt eine Editierfunktion für die ACP-Ergebnisse.
		+ Punkte werden für dieses Spiel für alle Nutzer neu berechnet
		+ Wurde ein Posting zu diesem Spiel erstellt, so wird es editiert und die Daten nach dem Edit aktualisiert
		+ Handelt es sich um ein kritisches Spiel (=ein letztes Spiel einer Gruppe, oder wenn dessen Gewinner eine Runde weiter kommt), so werden die nachfolgenden Spiele neu berechnet und aktualisiert.


Technisches
-----------
	+ Sämtliches Javascript korrigiert, formatiert und gegen JSHint geprüft
	+ Quelltext nach k&r formatiert
	+ kritische Spielenummern in Variablen ausgelagert und diese im Quelltext verwendet (zukünftig nur noch eine Anpassung notwendig)
	+ ACP -> Optionen -> Bis zu welchem Spiel kann der Vize-/Weltmeister getippt werden --> Sprachvariable für Beschreibung verwendet auch die Variablen
	+ Kommaersetzung für gestern/heute/morgen Sprachvariablen überarbeitet; Sprachvariablen unabhängig von Fettschreibung und Textinhalt (funktioniert auch mit anderen Worten); hardgecodeten Text entfernt
	+ Rücksetzung der Tageswertung aus dem ACP entfernt (bei Ergebnisse eintragen)
	+ Quotenberechnung wurde in eine globale Funktion ausgelagert und kann nun von überall getriggert werden.
	+ funktionslose is_integer-Funktion in SQL-Queries korrigiert


Sonstiges
---------
	+ Rechtschreibung und Grammatik korrigiert
	+ "Beste Dritte" von der EM 2016 rückgebaut