@@ -73,3 +73,4 @@ Sonstiges
 ---------
 	+ Rechtschreibung und Grammatik korrigiert
 	+ "Beste Dritte" von der EM 2016 rückgebaut
+	+ Setup löscht nicht mehr benötigte Dateien bei der Installation von selbst
